# qwerty

./: CMakeLists.txt
lab6/: main.cpp
lab6/files/: doc.cpp  doc.h  function.cpp  function.h  user.cpp  user.h
laba3/: CMakeLists.txt  main.cpp  main.h
laba4/: CMakeLists.txt  main.cpp  main.h
laba7/: CMakeLists.txt  main.cpp
laba7/include/: BlockHasher.h  CLIParser.h  Config.h  DuplicateFinder.h  FileData.h  FileHasher.h
laba7/src/: BlockHasher.cpp  CLIParser.cpp  DuplicateFinder.cpp  FileHasher.cpp
